fix-way of photo,z-index in mob-menu and logo,footer320px

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 767px) {
   .footer-container {
-    width: 375px;
+    width: 100%;
   }
 
   .footer-inner {
