--- a/src/css/mob-menu.css
+++ b/src/css/mob-menu.css
@@ -1,77 +1,78 @@
 .mob-menu.is-hidden {
-    transform: translateX(100%);
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .mob-logo {
-    display: flex;
+  display: flex;
 }
 
 .mob-menu {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background-color: var(--dark-green-color);
-    padding: 29px 20px 0px 20px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-green-color);
+  padding: 29px 20px 0px 20px;
 
-    transform: translateX(0);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob-menu-logo-title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 200px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 200px;
 }
 .mob-menu-close-btn {
-    display: block;
-    margin-left: auto;
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    border-radius: 0;
-    width: 24px;
-    height: 24px;
-    top: 29px;
-    right: 20px;
-    stroke: var(--white-color);;
+  display: block;
+  margin-left: auto;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  width: 24px;
+  height: 24px;
+  top: 29px;
+  right: 20px;
+  stroke: var(--white-color);
 }
 .menu-logo-icon {
-    fill: var(--white-color);;
-    margin-right: 4px;
-
+  fill: var(--white-color);
+  margin-right: 4px;
 }
 .mob-menu-text-logo {
-    font-size: 12px;
-    line-height: 1;
-    letter-spacing: -0.03em;
-    color: var(--white-color);
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  color: var(--white-color);
 }
 .mob-menu-list {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 14px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 14px;
 }
 .mob-menu-link {
-    font-family: var(--Epilogue-Thin);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
-    text-transform: uppercase;
-    color: var(--white-color);
+  font-family: var(--Epilogue-Thin);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  color: var(--white-color);
 }
 
-@media screen and (min-width: 768px){
-.mob-menu {
+@media screen and (min-width: 768px) {
+  .mob-menu {
     display: none;
-}
+  }
 }
